# tozo

./: .gitignore  .pdm-python  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: requirements.txt
src/backend/: development.env  pyproject.toml  run.py  testing.env
src/backend/src/backend/: run.py
src/backend/src/backend/lib/: email.py  test_email.py
src/backend/src/backend/models/: member.py
src/backend/src/backend/templates/: email.html
src/backend/tests/: conftest.py  test_rate_limits.py  test_run.py
src/backend/tests/blueprints/: control.py  test_control.py
src/frontend/: .gitignore  package-lock.json  package.json
src/infrastructure/: github.tf  main.tf
