[project]
name = "tozo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emran Hossain",email = "151853372+git-emran@users.noreply.github.com"},
]
dependencies = [
    "ast-serialize==0.5.0",
    "bandit==1.9.4",
    "black==26.5.1",
    "click==8.4.1",
    "djhtml==3.0.11",
    "flake8==7.3.0",
    "iniconfig==2.3.0",
    "isort==8.0.1",
    "librt==0.11.0",
    "markdown-it-py==4.2.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy==2.1.0",
    "mypy-extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "platformdirs==4.10.0",
    "pluggy==1.6.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "Pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytokens==0.4.1",
    "PyYAML==6.0.3",
    "rich==15.0.0",
    "stevedore==5.8.0",
    "typing-extensions==4.15.0",
    "vulture==2.16",
    "quart-auth>=0.11.0",
    "bcrypt>=5.0.0",
    "quart-db>=0.12.0",
]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
